<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm">确定</string>
    <string name="press_again">再按一次退出程序</string>
    <string name="update_success">更新成功</string>
    <string name="update_failed">更新失败</string>
    <string name="update_exception">更新异常</string>
    <string name="net_error">请检查网络连接</string>
    <string name="wait">请稍候...</string>
    <string name="cancel">取消</string>
    <string name="app_name">知秋天气</string>
    <string name="app_describe">一叶落知天下秋</string>
    <string name="add">添加城市</string>
    <string name="delete">删除城市</string>
    <string name="delete_success">删除成功</string>
    <string name="position">定位</string>
    <string name="pm">PM2.5</string>
    <string name="default_text">_ _</string>
    <string name="tempCur">实时温度</string>
    <string name="feature">未来天气</string>
    <string name="travel">天气指数</string>
    <string name="humidity">湿度</string>
    <string name="temp">温度</string>
    <string name="weather">天气</string>
    <string name="wind">风力</string>
    <string name="winp">风向</string>
    <string name="city">城市</string>
    <string name="choose_city">选择城市</string>
    <string name="findcity">搜索城市</string>
    <string name="loccity">定位城市</string>
    <string name="loc_failed">定位失败</string>
    <string name="setting">设置</string>
    <string name="share_weather">截图分享</string>
    <string name="weather_share">天气分享</string>
    <string name="share_failed">分享失败</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_city">LoverWeather</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_today_weather">TodayWeatherActivity</string>
    <string name="title_activity_feature_weather">FeatureWeatherActivity</string>
    <string name="title_activity_tt">TTActivity</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin mauris varius lacus porttitor eget blandit massa facilisis. Nulla pellentesque odio sed purus fermentum vitae viverra orci faucibus. Sed ullamcorper condimentum vulputate. Curabitur sit amet convallis velit. Vestibulum posuere eleifend risus ac adipiscing. Nam pulvinar nulla a velit faucibus imperdiet. Praesent eget nisi ac justo blandit sagittis. Maecenas at leo nisi, nec varius nisl.\nIn hac habitasse platea dictumst. Morbi neque tortor, vestibulum sed viverra a, luctus vel lorem. Nunc turpis eros, varius eget commodo et, euismod at eros. Sed tincidunt mi purus, vel posuere dui. Vestibulum ante lectus, porta sed mattis bibendum, scelerisque cursus sapien. Cras ultrices imperdiet fermentum. Aenean nisi nulla, euismod non blandit ac, dictum quis libero. Morbi consectetur tempor mollis. Suspendisse eget nunc arcu, vel ullamcorper augue. Integer malesuada, diam nec faucibus mollis, nisl velit euismod enim, ac mattis justo neque sit amet mauris. Vivamus pretium imperdiet pharetra.\nInteger sagittis augue sit amet lectus pulvinar sit amet commodo tortor mattis. Maecenas quis tellus eget ante eleifend sollicitudin non et nibh. Maecenas luctus euismod tristique. Fusce in odio nec diam blandit facilisis. Sed nec arcu eros. Vivamus quis tortor a metus tempus aliquam eget volutpat magna. Pellentesque id ultrices dolor. Sed blandit aliquet quam. Phasellus dapibus euismod vulputate. Aenean blandit, elit vitae vestibulum tincidunt, metus dui accumsan nulla, sit amet vehicula mauris lacus in est. Etiam dignissim pellentesque nulla vel malesuada. Cras vel lorem justo.\nSed condimentum nisl sit amet libero vestibulum hendrerit. Duis auctor tempus placerat. Proin velit ante, ornare nec dictum nec, hendrerit eu arcu. Etiam ut diam ornare quam venenatis pulvinar vitae vel leo. Vivamus consectetur, ante id interdum rhoncus, magna eros pulvinar lacus, a gravida nibh arcu vitae eros. Nulla scelerisque laoreet feugiat. Mauris sit amet gravida felis.\nNulla ac dolor sapien, vestibulum venenatis justo. Cras placerat velit vitae nibh pellentesque ultricies. Suspendisse adipiscing enim eu justo iaculis eu pretium urna fermentum. Duis porttitor nunc non nunc mattis vestibulum. Etiam elit tellus, feugiat in bibendum eget, adipiscing nec metus. Ut ut sem lacus, quis faucibus diam. Curabitur a nulla fermentum tortor dignissim posuere. Fusce faucibus ante ut sem imperdiet imperdiet eget vitae lorem. Etiam fringilla ornare ipsum, in sagittis quam ornare vitae. Nullam venenatis orci sit amet sapien adipiscing gravida. Proin turpis lectus, hendrerit vitae vehicula ut, auctor ac lectus. Pellentesque sollicitudin blandit ligula quis commodo. Mauris vulputate lectus in velit luctus aliquam. Quisque eget tincidunt elit. Quisque et augue quam, sed scelerisque eros.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_md_city">MdCityActivity</string>
    <string name="title_activity_md_fea_wea">MdFeaWeaActivity</string>
</resources>
