<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rtLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvTempCur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/tempCur"
                    android:textColor="@color/text_color"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/imWeather"
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/d0" />

                <TextView
                    android:id="@+id/tvWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="晴转多云"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/layoutTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/layoutLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/wireframe_light"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvCitynm"
                            style="@style/TextViewStyle"
                            android:text="北京" />

                        <TextView
                            android:id="@+id/tvDays"
                            style="@style/TextViewStyle"
                            android:text="2015-12-25" />

                        <TextView
                            android:id="@+id/tvWeek"
                            style="@style/TextViewStyle"
                            android:text="星期五" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/wireframe_dark"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/pm"
                            android:textColor="@color/text_color" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/tvAqi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="256"
                                android:textColor="@color/text_color" />

                            <TextView
                                android:id="@+id/tvQuality"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_weight="1"
                                android:text="严重污染"
                                android:textColor="@color/text_color" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/layoutBleft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/TextViewStyle"
                            android:layout_marginLeft="20dp"
                            android:ems="2"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/travel" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            style="@style/TextViewStyle"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/temp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            style="@style/TextViewStyle"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/humidity" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            style="@style/TextViewStyle"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/wind" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            style="@style/TextViewStyle"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/winp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutBright"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/TvTravel"
                            style="@style/TextViewStyle"
                            android:layout_marginTop="10dp"
                           android:lines="2"
                            android:text="@string/travel" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            android:id="@+id/tvTemp"
                            style="@style/TextViewStyle"
                            android:layout_marginTop="10dp"
                            android:text="@string/temp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            style="@style/TextViewStyle"
                            android:layout_marginTop="10dp"
                            android:text="@string/humidity" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            android:id="@+id/tvWind"
                            style="@style/TextViewStyle"
                            android:layout_marginTop="10dp"
                            android:text="@string/wind" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />

                        <TextView
                            android:id="@+id/tvWinp"
                            style="@style/TextViewStyle"
                            android:layout_marginTop="10dp"
                            android:text="@string/winp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/light_grey" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvFeature"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/feature"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <!-- </refresh.PullToRefreshScrollView> -->
    <!-- </android.support.v4.widget.SwipeRefreshLayout> -->
    <!-- </LinearLayout> -->

</RelativeLayout>